feat(#140) 記事削除のopenapi定義を追加
